Thu Oct 15 11:26:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Pipe.cpp:
          It OK to use socketpair to implement pipe on LynxOS.

Thu Oct 15 11:11:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fix for 64bit PPC

Thu Oct 15 07:43:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3744_Regression_Test.cpp:
        * tests/tests.mpc:
        * tests/run_test.lst:
          Moved the regression for 3744 to its own file, we don't have a fix yet

Wed Oct 14 23:15:59 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-snowleopard.h:
        * include/makeinclude/platform_macosx_snowleopard.GNU:

          First cut of adding snowleopard support.

Wed Oct 14 14:43:01 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Added/removed some defines.

Wed Oct 14 14:41:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
          Added include "ace/os_include/os_pthread.h" since LynxOS defines
          pthread_sigmask() in pthread.h.

Tue Oct 13 19:13:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
          Cleaned up ace_fileno_helper implementation and fixed compile
          problem on MinGW.

        * ace/os_include/os_unistd.h:
          Redefined ACE_STD{IN,OUT,ERR}.
          OS_Test now hopefully passes on all platforms.

Tue Oct 13 19:00:53 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Removed non-functional cross compiler setup.

Tue Oct 13 18:56:22 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Reverted:

          Mon Oct 13 11:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

                  * include/makeinclude/platform_lynxos.GNU:
                    Problems with Lynxos5.0 due to -mshared being passed to compiler